@@ -34,6 +34,8 @@
   * Support running 'dulwich.server' and 'dulwich.web' using 'python -m'.
     (Jelmer Vernooij)
 
+  * Add ObjectStore.close(). (Jelmer Vernooij)
+
  API CHANGES
 
   * SSHVendor.connect_ssh has been renamed to SSHVendor.run_command.
